--- a/.github/workflows/markdown-tests.yaml
+++ b/.github/workflows/markdown-tests.yaml
@@ -90,7 +90,8 @@ jobs:
       - name: Install packages
         run: |
           python -m pip install -U uv
-          uv pip install --upgrade --system -e '.[markdown-tests]'
+          uv pip install --upgrade --system -e .
+          uv pip install -r requirements-markdown-tests.txt
 
       - name: Start server
         run: |
