--- a/requirements-markdown-tests.txt
+++ b/requirements-markdown-tests.txt
@@ -1,5 +1,3 @@
-from pytest_markdown_docs import plugin
-
 pytest-markdown-docs @ git+https://github.com/PrefectHQ/pytest-markdown-docs@mdx-comment-support
 
 pandas
@@ -18,4 +16,4 @@ prefect-ray
 prefect-shell
 prefect-slack
 prefect-snowflake
-prefect_sqlalchemy
+prefect-sqlalchemy
