--- a/prefect-ui/package.json
+++ b/prefect-ui/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.56.2",
+    "openapi-fetch": "^0.12.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -17,6 +19,7 @@
     "@eslint/js": "^9.9.0",
     "@tanstack/router-devtools": "^1.58.15",
     "@tanstack/router-plugin": "^1.58.12",
+    "@types/node": "^22.7.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
