--- a/.github/workflows/static-analysis.yaml
+++ b/.github/workflows/static-analysis.yaml
@@ -77,8 +77,8 @@ jobs:
         # Generate OpenAPI YAML for the UI
         run: |
           uv run --with 'pydantic>=2.9.0' ./scripts/generate_openapi_yml.py
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add src/prefect/_internal/openapi.yml
           git commit -m "Update OpenAPI YAML" || echo "No changes to commit"
           git push origin HEAD:${{ steps.extract_branch.outputs.branch }}
