--- a/prefect-ui/package.json
+++ b/prefect-ui/package.json
@@ -13,7 +13,8 @@
     "@tanstack/react-query": "^5.56.2",
     "openapi-fetch": "^0.12.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
