--- a/prefect-ui/package.json
+++ b/prefect-ui/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.56.2",
+    "@tanstack/router-zod-adapter": "^1.58.16",
     "openapi-fetch": "^0.12.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
