--- a/prefect-ui/package.json
+++ b/prefect-ui/package.json
@@ -7,9 +7,11 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "service-sync": "uv run ../scripts/generate_openapi_yml.py && npx openapi-typescript ../src/prefect/_internal/openapi.yml -o ../src/api/prefect.tsx"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-hover-card": "^1.1.2",
