--- a/.github/workflows/prefect-client.yaml
+++ b/.github/workflows/prefect-client.yaml
@@ -58,6 +58,10 @@ jobs:
         env:
           TMPDIR: ${{ env.TMPDIR }}
 
+      - name: (DEBUG) Print the contents of the TMPDIR
+        run: ls -la
+        working-directory: ${{ env.TMPDIR }}
+
       - name: Build a binary wheel and a source tarball
         run: pip install wheel && python setup.py sdist bdist_wheel
         working-directory: ${{ env.TMPDIR }}
