--- a/.github/workflows/prefect-client.yaml
+++ b/.github/workflows/prefect-client.yaml
@@ -58,8 +58,8 @@ jobs:
         env:
           TMPDIR: ${{ env.TMPDIR }}
 
-      - name: (DEBUG) Print the contents of the TMPDIR
-        run: ls -la
+      - name: (DEBUG) Print versioneer output
+        run: python -c "import versioneer; print(versioneer.get_version())"
         working-directory: ${{ env.TMPDIR }}
 
       - name: Build a binary wheel and a source tarball
