Move some files around

--- a/.github/workflows/prefect-client.yaml
+++ b/.github/workflows/prefect-client.yaml
@@ -63,7 +63,7 @@ jobs:
         working-directory: ${{ env.TMPDIR }}
 
       - name: Build a binary wheel and a source tarball
-        run: pip install wheel && python setup.py sdist bdist_wheel
+        run: pip install wheel && python setup_client.py sdist bdist_wheel
         working-directory: ${{ env.TMPDIR }}
 
       - name: Install the built client from the locally built package
