--- a/setup.cfg
+++ b/setup.cfg
@@ -88,8 +88,8 @@ style = pep440
 versionfile_source = src/prefect/_version.py
 versionfile_build = prefect/_version.py
 version_regex = ^(\d+\.\d+\.\d+(?:[a-zA-Z0-9]+(?:\.[a-zA-Z0-9]+)*)?)$
-tag_prefix = +
-parentdir_prefix = +
+tag_prefix =
+parentdir_prefix =
 
 [coverage:run]
 branch = True
