--- a/.github/workflows/prefect-client.yaml
+++ b/.github/workflows/prefect-client.yaml
@@ -59,7 +59,7 @@ jobs:
           TMPDIR: ${{ env.TMPDIR }}
 
       - name: Build a binary wheel and a source tarball
-        run: pip install wheel && python setup.py sdist bdist_wheel
+        run: pip install versioneer wheel && python setup.py sdist bdist_wheel
         working-directory: ${{ env.TMPDIR }}
 
       - name: Install the built client from the locally built package
